@@ -1163,8 +1163,7 @@ def fs_import_ROM_NFO(roms, romID, verbose = True):
     # We assume NFO files are UTF-8. Decode data to Unicode.
     #
     # Future work: ESRB and maybe nplayers fields must be sanitized.
-    nfo_str = utils_load_file_to_str(nfo_file_path)
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
+    nfo_str = utils_load_file_to_str(nfo_file_path).replace('\r', '').replace('\n', '')
 
     # Read XML tags in the NFO single-line string and edit fields in the ROM dictionary.
     update_dic_with_NFO_str(nfo_str, 'title', nfo_dic, 'm_name')
@@ -1195,18 +1194,17 @@ def fs_import_ROM_NFO_file_scanner(NFO_FN):
     }
 
     # Read file, put in a string and remove line endings to get a single-line string.
-    nfo_str = utils_load_file_to_str(NFO_FN.getPath())
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
+    nfo_str = utils_load_file_to_str(NFO_FN.getPath()).replace('\r', '').replace('\n', '')
 
     # Read XML tags in the NFO single-line string and edit fields in the ROM dictionary.
-    update_dic_with_NFO_str(nfo_str, 'title', nfo_dic, 'm_name')
-    update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'm_year')
-    update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'm_genre')
-    update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'm_developer')
-    update_dic_with_NFO_str(nfo_str, 'nplayers', nfo_dic, 'm_nplayers')
-    update_dic_with_NFO_str(nfo_str, 'esrb', nfo_dic, 'm_esrb')
-    update_dic_with_NFO_str(nfo_str, 'rating', nfo_dic, 'm_rating')
-    update_dic_with_NFO_str(nfo_str, 'plot', nfo_dic, 'm_plot')
+    update_dic_with_NFO_str(nfo_str, 'title', nfo_dic, 'title')
+    update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'year')
+    update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'genre')
+    update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'developer')
+    update_dic_with_NFO_str(nfo_str, 'nplayers', nfo_dic, 'nplayers')
+    update_dic_with_NFO_str(nfo_str, 'esrb', nfo_dic, 'esrb')
+    update_dic_with_NFO_str(nfo_str, 'rating', nfo_dic, 'rating')
+    update_dic_with_NFO_str(nfo_str, 'plot', nfo_dic, 'plot')
 
     return nfo_dic
 
@@ -1214,7 +1212,6 @@ def fs_import_ROM_NFO_file_scanner(NFO_FN):
 def fs_get_ROM_NFO_name(rom):
     ROMFileName = FileName(rom['filename'])
     nfo_FN = FileName(ROMFileName.getPathNoExt() + '.nfo')
-
     return nfo_FN
 
 # Standalone launchers: NFO files are stored in self.settings["launchers_nfo_dir"] if not empty.
@@ -1255,8 +1252,7 @@ def fs_import_launcher_NFO(nfo_FN, launchers, launcherID):
         return False
 
     # Read file, put in a single-line string and remove all line endings.
-    nfo_str = utils_load_file_to_str(nfo_FN.getPath())
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
+    nfo_str = utils_load_file_to_str(nfo_FN.getPath()).replace('\r', '').replace('\n', '')
     update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'm_year')
     update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'm_genre')
     update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'm_developer')
@@ -1267,7 +1263,7 @@ def fs_import_launcher_NFO(nfo_FN, launchers, launcherID):
 # Used by autoconfig_import_launcher(). Returns a dictionary with the Launcher NFO file information.
 # If there is any error return a dictionary with empty information.
 def fs_read_launcher_NFO(nfo_FN):
-    launcher_dic = {
+    nfo_dic = {
         'year' : '',
         'genre' : '',
         'developer' : '',
@@ -1276,21 +1272,19 @@ def fs_read_launcher_NFO(nfo_FN):
     }
 
     log_debug('fs_read_launcher_NFO() Importing "{}"'.format(nfo_FN.getPath()))
-    # Return a dictionary with empty values if file not found.
     if not os.path.isfile(nfo_FN.getPath()):
         kodi_notify_warn('NFO file not found {}'.format(os.path.basename(nfo_FN.getPath())))
-        log_info("fs_read_launcher_NFO() NFO file not found '{}'".format(nfo_FN.getPath()))
-        return launcher_dic
+        log_info('fs_read_launcher_NFO() NFO file not found "{}"'.format(nfo_FN.getPath()))
+        return nfo_dic
 
-    # Read file, put in a single-line string and remove all line endings.
-    nfo_str = utils_load_file_to_str(nfo_FN.getPath())
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
-    update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'm_year')
-    update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'm_genre')
-    update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'm_developer')
-    update_dic_with_NFO_str(nfo_str, 'rating', nfo_dic, 'm_rating')
-    update_dic_with_NFO_str(nfo_str, 'plot', nfo_dic, 'm_plot')
-    return launcher_dic
+    # Read file, put it in a single-line string by removing all line endings.
+    nfo_str = utils_load_file_to_str(nfo_FN.getPath()).replace('\r', '').replace('\n', '')
+    update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'year')
+    update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'genre')
+    update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'developer')
+    update_dic_with_NFO_str(nfo_str, 'rating', nfo_dic, 'rating')
+    update_dic_with_NFO_str(nfo_str, 'plot', nfo_dic, 'plot')
+    return nfo_dic
 
 # Returns a FileName object
 def fs_get_launcher_NFO_name(settings, launcher):
@@ -1327,8 +1321,7 @@ def fs_import_category_NFO(nfo_FN, categories, categoryID):
         kodi_notify_warn('NFO file not found {}'.format(os.path.basename(nfo_FN.getPath())))
         log_error("fs_import_category_NFO() Not found '{}'".format(nfo_FN.getPath()))
         return False
-    nfo_str = utils_load_file_to_str(nfo_FN.getPath())
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
+    nfo_str = utils_load_file_to_str(nfo_FN.getPath()).replace('\r', '').replace('\n', '')
     update_dic_with_NFO_str(nfo_str, 'year', nfo_dic, 'm_year')
     update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'm_genre')
     update_dic_with_NFO_str(nfo_str, 'developer', nfo_dic, 'm_developer')
@@ -1363,15 +1356,14 @@ def fs_export_collection_NFO(nfo_FileName, collection):
 
 # Notifies errors in Kodi GUI. Success is notified in the caller.
 # Returns True if dictionary edited, False otherwise.
-def fs_import_collection_NFO(nfo_FileName, collections, launcherID):
-    log_debug('fs_import_collection_NFO() Importing "{}"'.format(nfo_FileName.getPath()))
-    if not nfo_FileName.isfile():
-        kodi_notify_warn('NFO file not found {}'.format(os.path.basename(nfo_FileName.getOriginalPath())))
-        log_error("fs_import_collection_NFO() Not found '{}'".format(nfo_FileName.getPath()))
+def fs_import_collection_NFO(nfo_FN, collections, launcherID):
+    log_debug('fs_import_collection_NFO() Importing "{}"'.format(nfo_FN.getPath()))
+    if not nfo_FN.isfile():
+        kodi_notify_warn('NFO file not found {}'.format(os.path.basename(nfo_FN.getOriginalPath())))
+        log_error("fs_import_collection_NFO() Not found '{}'".format(nfo_FN.getPath()))
         return False
 
-    nfo_str = utils_load_file_to_str(nfo_FileName.getPath())
-    nfo_str = nfo_str.replace('\r', '').replace('\n', '')
+    nfo_str = utils_load_file_to_str(nfo_FN.getPath()).replace('\r', '').replace('\n', '')
     update_dic_with_NFO_str(nfo_str, 'genre', nfo_dic, 'm_genre')
     update_dic_with_NFO_str(nfo_str, 'rating', nfo_dic, 'm_rating')
     update_dic_with_NFO_str(nfo_str, 'plot', nfo_dic, 'm_plot')
